-- What's new for ???

New Searches

* rot13 - Glenn add a rot13 converter function
* gfaq - GameFAQs.com from Casper Kvan Clausen

Modified Searches

* gg - MLL added /news and more language switches (type "gg ?")
* setiq - MLL added warning to description about password retention
* so - Non-digits characters are removed form the search string


-- What's new for 3.0.0.18 (beta)

New Searches

* yp - Yellow pages search from Tim Danner
* setiq - Login as an admin to your setiqueue web admin interface - from MLL

Modified Searches

* qsfind - Changed to display a popup window instead of an alert dialog when
           no match is found.
* ebay - Fixed regular expression so "ebay <itemnumber>" will work correctly.

Bug Fixes

* Changed regex in parseArgs to allow any non-whitespace character in switch values.  
  Previously it only allowed identifier characters which excluded periods, etc.
* Can now set category for searches in localaliases.txt

Miscellaneous

* Will rewrote the 'window finding' code to use a 'document' object 
passed-in from the script, rather than the original method of wandering 
around class names.   The latter always looked fragile, and has proved to 
be so in real life.


-- What's new for 3.0 (June 28, 2002)

Search bar

* New cascading help menu
* Most-recently-used list on help menu
* Support for DEL key and CTRL-INS, etc. cut/copy/paste
* Fix for problems on machines set for non-English character encoding
* Ability to enable/disable searches in the help window
* Shift-Enter on search forces new browser window (overrides reuseBrowserWindowMode)
* Search history search (enter part of a previous search and press f8)
* Improved installer and version checking
* Calender - some bug fixes
* Lots of minor bug fixes
* Global hot key (WIN - S) to jump to DQSD from any application
* "?" followed by a string displays all searches with that string in the search or
  description


New Preferences
